--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.16.1",
+    "express-sessions": "^1.0.6",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.5.11",
+    "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
