--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "sentiment": "^5.0.1"
   }
 }
+
