--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.16.1",
     "express-sessions": "^1.0.6",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
@@ -22,4 +23,3 @@
     "sentiment": "^5.0.1"
   }
 }
-
