--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
@@ -16,6 +17,7 @@
     "express-sessions": "^1.0.6",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
